# copy-move-forgery-detection

./: .gitignore  README.md  inference.py  model3_train.py  pyproject.toml  requirements.txt  segmentation_models_pytorch-0.5.0-py3-none-any.whl
models/: rf_model.py
notebooks/: efficient-net-b0-classifier.ipynb  model3.ipynb
outputs/predictions/: rf_predictions.csv  svm_predictions.csv
src/: config.py  features.py  random_forest.py  svm.py
